--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,8 +13,8 @@ html {
 
 :root {
     --primary-color: rgb(84, 125, 187);
-    --secondary-color: #dd75e0;
-    --tertiary-color: #39a6b2;
+    --secondary-color: #18be79;
+    --tertiary-color: #18be79;
     --quarternary-color: white;
 }
 
@@ -24,6 +24,7 @@ body {
     margin: 0;
     line-height: 1.5;
     padding: 0;
+    background-color: rgb(0, 0, 0);
 }
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
@@ -32,10 +33,21 @@ p {
     margin: 0;
 }
 
+#svg {
+    animation: fill 0.7s ease forwards 4s;
+
+}
+
+#svg path:nth-child(1) {
+    stroke-dasharray: 1516px;
+    stroke-dashoffset: 1516;
+    animation: line-anim 16s ease forwards 0.2s;
+}
+
 /* header */
 header {
     padding: 20px 35px;
-    background-color: var(--tertiary-color);
+    /* background-color: var(--tertiary-color); */
     opacity: 0.9;
     display: flex;
     justify-content: space-between;
@@ -48,7 +60,7 @@ header {
 header h1 {
     font-weight: bold;
     margin: 0;
-    font-size: 3vw;
+    font-size: smaller;
     color: var(--quarternary-color);
 }
 header h1:hover {
@@ -120,17 +132,18 @@ nav a:last-child {
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-end;
-    background-image: url("../images/IMG_3851.jpeg");
+    background-color: rgb(0, 0, 0);
     background-size: cover;
     background-position: bottom;
     height: 30vw;
+    background-image: url("../../images/IMG_3851.jpeg");
 }
 .hero h3 {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     font-size: 2.2vw;
-    color: rgba(10, 69, 197, 0.6);
+    color: var(--secondary-color);
     padding: 0 20px 20px 0;
 }
 
@@ -162,7 +175,6 @@ nav a:last-child {
     color: var(--quarternary-color);
 }
 .about h3, span {
-    background-color: var(--quarternary-color);
     color: var(--secondary-color);
     border-radius: 3px;
 }
@@ -225,17 +237,23 @@ nav a:last-child {
     grid-column: span 8;
 }
 #card1 {
-    background-image: url("../images/run-buddy-img.png");
+    background-image: url("../../images/hike-now-ss.png");
     background-position: center;
     background-size: cover;
 }
 #card2 {
-    background-image: url("../images/hike-now-ss.png");
+    background-image: url("../../images/doorman-screenshot.png");
     background-position: center;
     background-size: cover;
 }
 #card3 {
-    background-image: url("../images/weather-boss.png");
+    background-image: url("../../images/run-buddy-img.png");
+    background-position: center;
+    background-size: cover;
+}
+
+#card4 {
+    background-image: url("../../images/weather-boss.png");
     background-position: center;
     background-size: cover;
 }
@@ -258,6 +276,7 @@ nav a:last-child {
     padding-right: 15px;
     border-right: 3px solid var(--tertiary-color);
     line-height: 1.1;
+    color: var(--quarternary-color);
 }
 .page-section a {
     font-weight: lighter;
@@ -354,5 +373,20 @@ nav a:last-child {
     }
     .about h2 {
         font-size: 5vw;
+    }
+}
+
+@keyframes line-anim {
+    to{
+        stroke-dashoffset: 0;
+    }
+}
+
+@keyframes fill {
+    from {
+        fill: transparent;
+    }
+    to {
+        fill: white;
     }
 }
